--- a/todo
+++ b/todo
@@ -1,3 +1,9 @@
 #TODO FILE
 
-There are things to be done and with my processing memory I'll forget them for sure if I don't create a list
+-Make some sense of the tokens. There is a lot of info to be found on the docs. Way too much for my liking. Once there is a need to use different methods, add a manual.
+
+-Clean the local versions of cheatsheets and remove extras. Backup first of course.
+
+-Feel free to improve the manuals any time.
+
+-Keep tree map available and updated at all times
